tests/NormalTests/paczka1/small_fuzzy/35435150.err
Error in line 3: 68gte S508 31,5
Error in line 4: 68gte S476 40,2
Error in line 5: 68gte S893 52,2
Error in line 10: 68gte S391 84,6
